Update Setup chapter